ansible/kubernetes/ingress-eschool.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "34.95.89.73"     
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: eschool-frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: eschool-api
          servicePort: 80
